{
  "version": 4,
  "terraform_version": "0.12.10",
  "serial": 8,
  "lineage": "ee6fc529-982e-4f1a-b0fe-b853e89eff7d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03ef731cc103c9f09",
            "arn": "arn:aws:ec2:eu-west-1:119555522314:instance/i-0f23b342bec6b7689",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0f23b342bec6b7689",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "workshop-key-student1",
            "monitoring": false,
            "primary_network_interface_id": "eni-0e04eef71b28ffbcf",
            "private_dns": "ip-172-31-29-82.eu-west-1.compute.internal",
            "private_ip": "172.31.29.82",
            "public_dns": "ec2-3-248-233-170.eu-west-1.compute.amazonaws.com",
            "public_ip": "3.248.233.170",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-03b2df1d9b0dd2829",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow-all-outbound-student1",
              "allow-http-student1",
              "allow-ssh-student1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-4481bd0d",
            "tags": {
              "Name": "terraform-instance-aws-student1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-041fcafdcd6bf83e8",
              "sg-0e5f75336b33322c6",
              "sg-0f90f3abed172296e"
            ]
          },
          "depends_on": [
            "aws_key_pair.workshop_key",
            "aws_security_group.allow_http",
            "aws_security_group.allow_outbound",
            "aws_security_group.allow_ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:119555522314:security-group/sg-0f90f3abed172296e",
            "description": "Allow HTTP inbound traffic",
            "egress": [],
            "id": "sg-0f90f3abed172296e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow-http-student1",
            "name_prefix": null,
            "owner_id": "119555522314",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-b66b6ad1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_outbound",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:119555522314:security-group/sg-0e5f75336b33322c6",
            "description": "Allow all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e5f75336b33322c6",
            "ingress": [],
            "name": "allow-all-outbound-student1",
            "name_prefix": null,
            "owner_id": "119555522314",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-b66b6ad1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:119555522314:security-group/sg-041fcafdcd6bf83e8",
            "description": "Allow SSH inbound traffic",
            "egress": [],
            "id": "sg-041fcafdcd6bf83e8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-ssh-student1",
            "name_prefix": null,
            "owner_id": "119555522314",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-b66b6ad1"
          }
        }
      ]
    }
  ]
}